--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save nature</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Save Nature</h1>
+    <section class="header-section">
+        <div class="header-div">
+            <h1>Let's Save Nature <br>It's Important</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore deleniti vitae debitis.
+                Reprehenderit ad
+                accusamus corporis fugit error aperiam?</p>
+            <a href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+        </div>
+    </section>
+    <section>
+
+    </section>
 </body>
 
 </html>
