--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore deleniti vitae debitis.
                 Reprehenderit ad
                 accusamus corporis fugit error aperiam?</p>
-            <a href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+            <a class="link-button" href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
         </div>
     </section>
     <section>
