--- a/index.html
+++ b/index.html
@@ -15,15 +15,76 @@
 <body>
     <section class="header-section">
         <div class="header-div">
-            <h1>Let's Save Nature <br>It's Important</h1>
+            <h1 class="title">Let's Save Nature <br>It's Important</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore deleniti vitae debitis.
                 Reprehenderit ad
                 accusamus corporis fugit error aperiam?</p>
             <a class="link-button" href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
         </div>
     </section>
+    <section class="second-section">
+        <div class="flex-section second-flex">
+            <h1>Nature depend on your behaviour</h1><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ipsum placeat inventore qui incidunt
+                suscipit eius asperiores, <br><br>quo quidem ullam libero? Ratione recusandae deleniti natus numquam
+                tenetur,
+                dolore
+                ipsa adipisci.</p>
+            <a class="link-button" href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+        </div>
+        <div class="flex-section">
+            <img src="image/natur.jpg" alt="nature">
+        </div>
+    </section>
+    <section class="second-section">
+        <div class="flex-section">
+            <img src="image/nao.jpg" alt="nao">
+        </div>
+        <div class="flex-section second-flex">
+            <h1>They need us to survive</h1><br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur animi at atque id, nesciunt fuga
+                doloremque ea qui ducimus omnis <br><br>autem natus error unde temporibus necessitatibus ad voluptatem
+                aliquid
+                minus!</p>
+            <a class="link-button" href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+        </div>
+    </section>
     <section>
-
+        <div class="third-section">
+            <h1>Nature depend on your behaviour</h1><br>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus illo cupiditate perspiciatis non
+                quod, impedit sit fugiat reprehenderit blanditiis esse?</p>
+        </div>
+        <div id="back">
+            <div class="grid">
+                <div class="gird-img image"><img src="image/Frame-1.png" alt="fram"></div>
+                <div class="gird-img">
+                    <h3>Direct help</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, ullam?</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="gird-img image"><img src="image/Frame-1.png" alt="fram"></div>
+                <div class="gird-img">
+                    <h3>Direct help</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, ullam?</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="gird-img image"><img src="image/Frame-1.png" alt="fram"></div>
+                <div class="gird-img">
+                    <h3>Direct help</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, ullam?</p>
+                </div>
+            </div>
+            <div class="grid">
+                <div id="paa" class="gird-img"><img src="image/Frame-1.png" alt="fram"></div>
+                <div class="gird-img">
+                    <h3>Direct help</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, ullam?</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
