--- a/index.html
+++ b/index.html
@@ -86,6 +86,41 @@
             </div>
         </div>
     </section>
+    <section class="second-section">
+        <div class="img-section"><img src="image/kao.jpg" alt="kao"></div>
+        <div class="img-section"><img src="image/der.jpg" alt="der"></div>
+        <div class="img-section"><img src="image/ally.jpg" alt="ally"></div>
+    </section>
+    <section>
+        <div class="extend">
+            <h1>Extend Your Hand of Charity. Earn
+                Rewards for the Hereafter</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium dicta aperiam ipsa soluta maiores
+                facere iure sint, corporis quo modi fuga illo ducimus eum doloremque ullam possimus magni blanditiis
+                illum?</p>
+        </div>
+        <div class="donate">
+            <div class="img-collection class">
+                <img src="image/pp.jpg" alt="">
+                <h3>Donate Fund</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, tenetur?</p>
+                <a href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+            </div>
+            <div class="img-collection class">
+                <img src="image/pp.jpg" alt="">
+                <h3>Donate Fund</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, tenetur?</p>
+                <a href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+            </div>
+            <div id="maa" class="img-collection class">
+                <img src="image/pp.jpg" alt="">
+                <h3>Donate Fund</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, tenetur?</p>
+                <a href="https://web.facebook.com/Suman.Datta.89/">DONATE NOW</a>
+            </div>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
