--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section>
         <div class="extend">
             <h1>Extend Your Hand of Charity. Earn
-                Rewards for the Hereafter</h1>
+                Rewards for the Hereafter</h1><br><br>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium dicta aperiam ipsa soluta maiores
                 facere iure sint, corporis quo modi fuga illo ducimus eum doloremque ullam possimus magni blanditiis
                 illum?</p>
@@ -121,6 +121,10 @@
         </div>
         </div>
     </section>
+    <footer>
+        <h2>Donate for nature</h2>
+        <p>Thank you</p>
+    </footer>
 </body>
 
 </html>
